# scone-core

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  VERSION.txt  changes.txt
.github/workflows/: continuous-integration-workflow.yml
CMakeModules/: FindOpenSim.cmake
doc/: Doxyfile  generate.bat
doc/sconepy/: sconepy.html  sconepy.txt  sconepy_dokuwiki.txt  sconepy_help.txt
doc/tools/: generate_sconepy.py  sconepy_dokuwiki_generator.py  sconetoolsdev.py
licenses/: Lua-MIT.txt  OpenSim3-NOTICE.txt
resources/: scone-settings-schema.zml
resources/models/: H0918v2_osim3.osim  H1922_osim3.osim  H1926_ham_osim3.osim
resources/package/: postinst.in  postrm.in
scenarios/Examples/: Gait - H0914 - OpenSim3.scone  Gait - H0914 - OpenSim4.scone  Gait - H0914J - Hyfydy.scone  Gait - H0918 - OpenSim3.scone  Gait - H0918 - OpenSim4.scone  Gait Perturbed - H0914 - Hyfydy.scone  Gait Uneven Terrain - H0914 - Hyfydy.scone  Gait Uneven Terrain - H0914 - Hyfydy.scone.sto  Perturbed Gait - H0914 - Hyfydy.scone  Standing High Jump - OpenSim3.scone  Standing High Jump - OpenSim4.scone
scenarios/Examples2/: Gait - H0914 - Hyfydy.scone  Gait - H0914 - OpenSim3.scone  Gait - H0914 - OpenSim4.scone  Gait - H0914J - Hyfydy.scone  Gait - H0918 - Hyfydy.scone  Gait - H0918 - OpenSim3.scone  Gait - H0918 - OpenSim4.scone  Gait Perturbed - H0914 - Hyfydy.scone  Gait Uneven Terrain - H0914 - Hyfydy.scone  Standing High Jump - Hyfydy.scone  Standing High Jump - OpenSim3.scone
scenarios/Examples3/: Gait - H0914 - Hyfydy.scone  Gait - H0918 - Hyfydy.scone  Gait2D - GeyerHerr2010 - Hyfydy.scone  Gait2D - GeyerHerr2010 - OpenSim3.scone  Gait2D - GeyerHerr2010 - OpenSim4.scone  Gait2D - GeyerHerr2010 - Scaled - Hyfydy.scone  Gait2D - GeyerHerr2010 - Soft Limits - Hyfydy.scone  Gait2D - H0918 - Hyfydy.scone  Gait2D - H0918 - OpenSim3.scone  Gait2D - H0918 - OpenSim4.scone  Gait2D - H0918 - Soft Limits - Hyfydy.scone  Gait2D - H0918 - Uneven Terrain - Hyfydy.scone  Gait3D - H1922 - Hyfydy.scone  Gait3D - H1922 - Treadmill - Hyfydy.scone  Gait3D - H1922 - Uneven Terrain - Hyfydy.scone  Interactive Demo - H3022 - Hyfydy.scone  Interactive Mode - H1922 - Hyfydy.scone  Jump2D - H0906 - Joint Motor - Hyfydy.scone  Jump2D - H0918 - Hyfydy.scone  Jump2D - H0918 - OpenSim3.scone  Jump2D - H0918 - OpenSim4.scone  Jump3D - H1622 - Hyfydy.scone  Jump3D - H1922 - Hyfydy.scone  Standing High Jump - Hyfydy.scone
scenarios/SconePy/: H0918M_osim3.osim  H0918_hyfydy.scone  H1622v7b3x2.hfd  gait_reflex_modulation_example.py  optimization_example.py  scone.py  sconepy_example.py  sconetools.py
scenarios/Tutorials2/: Tutorial 1 - Introduction - Hyfydy.scone  Tutorial 1 - Introduction - OpenSim.scone  Tutorial 2a - High Jump - Hyfydy.scone  Tutorial 2a - High Jump - OpenSim.scone  Tutorial 2b - High Jump Polynomial - Hyfydy.scone  Tutorial 2b - High Jump Polynomial - OpenSim.scone  Tutorial 2c - Straight Pose Jump - Hyfydy.scone  Tutorial 2c - Straight Pose Jump - OpenSim.scone  Tutorial 3a - Balance - Hyfydy.scone  Tutorial 3a - Balance - OpenSim.scone  Tutorial 3b - Motor Noise Balance - Hyfydy.scone  Tutorial 3b - Motor Noise Balance - OpenSim.scone  Tutorial 4a - Gait - Hyfydy.scone  Tutorial 4a - Gait - OpenSim.scone  Tutorial 4b - Fast Gait - Hyfydy.scone  Tutorial 4b - Fast Gait - OpenSim.scone  Tutorial 4c - Perturbed Gait - Hyfydy.scone  Tutorial 4c - Perturbed Gait - OpenSim.scone  Tutorial 4d - Slippery Slope - Hyfydy.scone  Tutorial 4d - Slippery Slope - OpenSim.scone  Tutorial 5a - Plantarflexor Weakness - Hyfydy.scone  Tutorial 5a - Plantarflexor Weakness - OpenSim.scone  Tutorial 5b - Short Hamstrings - Hyfydy.scone  Tutorial 5b - Short Hamstrings - OpenSim.scone  Tutorial 5c - Hyper-reflexia - Hyfydy.scone  Tutorial 5c - Hyper-reflexia - OpenSim.scone  Tutorial 6a - Script - Body Height - Hyfydy.scone  Tutorial 6a - Script - Body Height - OpenSim.scone  Tutorial 6b - Script - Balance Device - Hyfydy.scone  Tutorial 6b - Script - Balance Device - OpenSim.scone  Tutorial 6b - Script - Gyro Balance Gait - Hyfydy.scone  Tutorial 6b - Script - Gyro Balance Gait - OpenSim.scone
src/sconebench/: CMakeLists.txt  sconebench.cpp
src/sconelib/sconelua/: CMakeLists.txt  ScriptController.cpp  ScriptController.h  ScriptMeasure.cpp  ScriptMeasure.h  lua_api.cpp  lua_api.h  lua_script.cpp  lua_script.h
src/sconelib/sconeopensim3/: BodyOpenSim3.cpp  BodyOpenSim3.h  CMakeLists.txt  ConstantForce.cpp  ConstantForce.h  ContactForceOpenSim3.cpp  ContactForceOpenSim3.h  DofOpenSim3.cpp  DofOpenSim3.h  JointOpenSim3.cpp  JointOpenSim3.h  ModelOpenSim3.cpp  ModelOpenSim3.h  MuscleOpenSim3.cpp  MuscleOpenSim3.h  StateComponentOpenSim3.cpp  StateComponentOpenSim3.h  platform.h  sconeopensim3.cpp  simbody_tools.h
src/sconelib/sconeopensim4/: BodyOpenSim4.cpp  BodyOpenSim4.h  CMakeLists.txt  ConstantForce.cpp  ConstantForce.h  ContactForceOpenSim4.cpp  ContactForceOpenSim4.h  DofOpenSim4.cpp  DofOpenSim4.h  JointOpenSim4.cpp  JointOpenSim4.h  LigamentOpenSim4.cpp  LigamentOpenSim4.h  ModelOpenSim4.cpp  ModelOpenSim4.h  MuscleOpenSim4.cpp  MuscleOpenSim4.h  StateComponentOpenSim4.cpp  StateComponentOpenSim4.h  platform.h  sconeopensim4.cpp  simbody_tools.h
src/sconelib/sconeuser/: CMakeLists.txt  ExampleController.cpp  ExampleController.h  sconeuser.cpp  sconeuser.h
src/sconepy/: CMakeLists.txt
src/sconepy/src/: sconepy.cpp  sconepy.h  sconepy_scenario.h  sconepy_sensors.h  sconepy_tools.h
tools/: .updateversion.sh  build_config  create-scone-core-package.sh  linux_1_get-dependencies  linux_1_get-external-dependencies  linux_4_package  linux_build-scone-core-depencies.sh  linux_create-scone-core-package.sh  mac_1_get-dependencies  mac_1_get-external-dependencies  make_release_linux  make_release_linux.sh  unix_2_build-fix  unix_2_build_dependencies  unix_2_build_dependencies-fix  unix_2b_build-simbody  unix_2b_build-simbody-fix  unix_2c_build-opensim3  unix_2c_build-opensim3-fix  unix_2d_build-scone  unix_2d_build-scone-core-hfd  unix_2d_build-scone-hfd
(+479 files in other folders)
